[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
chrono = "0.4"

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.cursive] 
version = "0.19"
default-features = false
features = ["crossterm-backend"]